feat - pet type listing
